Fri Jan 19 11:17:13 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/fisql.txt
	* src/apps/fisql/edit.c src/apps/fisql/edit.h
	* src/apps/fisql/handlers.c src/apps/fisql/handlers.h
	* src/apps/fisql/interrupt.c src/apps/fisql/interrupt.h
	* src/apps/fisql/terminal.c src/apps/fisql/terminal.h
	* src/apps/fisql/xgetpass.c src/apps/fisql/xgetpass.h
	* src/apps/fisql/fisql.c
	- Added notice of copyright and GPL license
	
Thu Jan 18 23:55:17 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/fisql.txt added man page for fisql
	* src/apps/fisql/fisql.c fixed discarding const warnings
	* doc/api_status.txt include/sybdb.h src/dblib/dblib.c
	-  added dbgettime()

Thu Jan 18 17:57:52 EST 2007	Nick Castellano <entropy@freetds.org>
	* AUTHORS: credit myself as a contributor

Thu Jan 18 17:50:18 EST 2007	Nick Castellano <entropy@freetds.org>
	* src/dblib/dblib.c:
	- fix dbprrow() to print character data correctly
	- fix dbprrow() to not loop endlessly on aggregate rows

Thu Jan 18 08:57:10 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/utf8_2.c: fix error handler

Wed Jan 17 09:48:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/fisql/fisql.c: use mkstemp instead of mktemp
	* src/tds/util.c: cleanup

Tue Jan 16 16:30:42 EDT 2007	Nick Castellano <entropy@freetds.org>
	* configure.ac
	* src/apps/Makefile.am
	* src/apps/fisql: contribute free DB-Libary isql application

Tue Jan 16 09:57:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c: fix messages

Tue Jan 16 09:48:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: fix problem with Perl 5.8.8
	* src/dblib/dblib.c: fix possible thread problem

Tue Jan 16 00:28:28 EST 2007	JK Lowden <jklowden@freetds.org>
	* include/dblib.h src/dblib/bcp.c
	* src/dblib/dblib.c src/dblib/unittests/rpc.c
	- support variadic form of dbperror

Mon Jan 15 14:40:35 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/common.c